[gd_scene load_steps=6 format=3 uid="uid://bvrp2ve2wlfre"]

[ext_resource type="Script" path="res://scripts/multiplayer.gd" id="1_4ioe7"]
[ext_resource type="Texture2D" uid="uid://ck7dyq4wenuh1" path="res://gfx/ui/gui/background3.png" id="2_qkcwx"]
[ext_resource type="Texture2D" uid="uid://dstrgdyjjnbja" path="res://gfx/ui/buttons/buttons_1x.png" id="2_urlrf"]
[ext_resource type="PackedScene" uid="uid://bqpv8ei121ql0" path="res://scenes/level.tscn" id="2_wtcmp"]
[ext_resource type="Theme" uid="uid://chvahglekuifq" path="res://gui_theme.tres" id="3_evauv"]

[node name="Multiplayer" type="Node2D"]
script = ExtResource("1_4ioe7")
player_scene = ExtResource("2_wtcmp")

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color(0.443137, 0.286275, 0.32549, 0.85098)
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(6.4, 3.6)
texture = ExtResource("2_qkcwx")
expand_mode = 1

[node name="Host" type="Button" parent="."]
offset_left = 47.0
offset_top = 34.0
offset_right = 213.0
offset_bottom = 66.0
theme = ExtResource("3_evauv")
text = "Host"

[node name="Join" type="Button" parent="."]
offset_left = 48.0
offset_top = 80.0
offset_right = 214.0
offset_bottom = 111.0
theme = ExtResource("3_evauv")
text = "Join"

[node name="Back" type="Button" parent="."]
offset_left = 16.0
offset_top = 120.0
offset_right = 32.0
offset_bottom = 136.0

[node name="Cross" type="Sprite2D" parent="Back"]
position = Vector2(8, 8)
scale = Vector2(2, 2)
texture = ExtResource("2_urlrf")
hframes = 16
vframes = 2
frame = 11

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://scenes/player.tscn")
spawn_path = NodePath("..")

[connection signal="pressed" from="Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="Join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_exit_pressed"]
